--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "test",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,14 @@
     "mongoose": "^6.6.7",
     "uuid": "^3.3.3",
     "uuidv1": "^1.6.14"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlaaTurki/Mean_stack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlaaTurki/Mean_stack/issues"
+  },
+  "homepage": "https://github.com/AlaaTurki/Mean_stack#readme",
+  "description": ""
 }
